import "PropertyType.proto";

package ThingModel.Proto;

message ThingType {
	required int32 string_name = 1;

	optional int32 string_description = 2;

	repeated PropertyType properties = 3;	
}